--- a/src/main/resources/templates/admin/goods_management.html
+++ b/src/main/resources/templates/admin/goods_management.html
@@ -97,36 +97,37 @@
                                 <td>
                                     <a href="" type="button" data-toggle="modal" data-target="#login-modal"
                                        class="btn btn-success">修改</a>
-                                    <button type="button" class="btn btn-danger">禁用</button>
+                                    <button type="button" class="btn btn-danger">删除</button>
                                 </td>
                             </tr>
 
                             </tbody>
                         </table>
                     </div>
+
+<!--                    <div class="modal fade" id="login-modal">-->
+<!--                        <div class="modal-dialog">-->
+<!--                            <div class="modal-content">-->
+<!--                                <div class="modal-header">-->
+<!--                                    <button class="close">&times;</button>-->
+<!--                                    <h4>修改</h4>-->
+<!--                                </div>-->
+<!--                                <div class="modal-body" >-->
+<!--                                    <p>修改的表单</p>-->
+<!--                                </div>-->
+<!--                                <div class="modal-footer">-->
+<!--                                    <button class="btn btn-primary">保存</button>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+
                 </div>
             </div>
         </div>
     </div>
 
 </div>
-
-<!--dropdown是下拉菜单-->
-<!--
-<div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        Dropdown
-        <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-        <li><a href="#">Action</a></li>
-        <li><a href="#">Another action</a></li>
-        <li><a href="#">Something else here</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">Separated link</a></li>
-    </ul>
-</div>
--->
 
 </body>
 </html>
