添加客房管理修改功能,js问题修复.

--- a/src/main/resources/templates/user/apartment_location.html
+++ b/src/main/resources/templates/user/apartment_location.html
@@ -60,7 +60,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/roombook">预定房间</a></li>
                 <li><a href="/location">公寓位置</a></li>
-                <li><a href="#">购买商品</a></li>
+                <li><a href="/buy_goods">购买商品</a></li>
                 <li class="dropdown">
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
