--- a/src/main/resources/templates/admin/room_modefy.html
+++ b/src/main/resources/templates/admin/room_modefy.html
@@ -16,7 +16,7 @@
 </div>
 <div class="modal-body">
 
-    <form role="form">
+    <form action="" method="post">
         <div class="form-group">
             <label for="number">房间号</label>
             <input type="number" class="form-control" id="number" placeholder="输入房间号">
@@ -27,13 +27,13 @@
         </div>
         <div class="form-group">
             <label for="name">入住状态</label>
-            <select>
-                <option >已入住</option>
-                <option >已离店</option>
+            <select name="">
+                <option value="" >已入住</option>
+                <option  value="">已离店</option>
             </select>
             <label for="name">是否停用</label>
             <select>
-                <option>是</option>
+                <option >是</option>
                 <option>否</option>
             </select>
         </div>
