--- a/src/main/resources/templates/user/apartment_location.html
+++ b/src/main/resources/templates/user/apartment_location.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>导航</title>
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
@@ -13,34 +13,52 @@
 
     <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="jquery-3.4.1.min.js"></script>
-    <script type="text/javascript"
-        src="https://webapi.amap.com/maps?v=1.4.8&key=9aa498732bfcfe03cfdf8bb174796390"></script>
-    <!--  异步版本 ui组件, 用于添加城市信息 -->
-    <script src="https://webapi.amap.com/ui/1.0/main.js?v=1.0.11"></script>
-    <!-- <script src="//webapi.amap.com/ui/1.0/main-async.js"></script> -->
+
+    <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.22.0/moment-with-locales.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
     <!-- 移动端开发时, 添加以下内容 -->
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 
-    </head>
-
-<style>
-    #container {
-        width: 600px;
-        height: 480px;
-        display: inline-block;
-    }
-    #container1 {
-        width: 600px;
-        height: 480px;
-    }
-    #right{
-        float: left;
-        margin-top: 40px;
-    }
-</style>
 
 
+
+
+    <style type="text/css">
+        html,
+        body,
+        #container {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+    <style type="text/css">
+        #panel {
+            position: fixed;
+            background-color: white;
+            max-height: 100%;
+            overflow-y: auto;
+            top: 70px;
+            right: 10px;
+            width: 280px;
+        }
+        #panel .amap-call {
+            background-color: #009cf9;
+            border-top-left-radius: 40px;
+            border-top-right-radius: 40px;
+        }
+        #panel .amap-lib-driving {
+            border-bottom-left-radius: 40px;
+            border-bottom-right-radius: 40px;
+            overflow: hidden;
+        }
+    </style>
+    <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css" />
+    <script src="https://a.amap.com/jsapi_demos/static/demo-center/js/demoutils.js"></script>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=9aa498732bfcfe03cfdf8bb174796390&plugin=AMap.Driving"></script>
+    <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
+</head>
 <body>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -89,10 +107,7 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-
 <!--右边主要区域 -->
-
-
 <script type="text/javascript" src="lib/js/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="lib/js/bootstrap.min.js"></script>
 <div class="modal fade" id="login-modal" tabindex="-1" data-remote="XiuGai.html">
@@ -109,44 +124,32 @@
 <script src="lib/holder.js"></script>
 <script src="lib/js/app.js"></script>
 
+<div id="container"></div>
+<div id="panel"></div>
+<script type="text/javascript">
 
-<div id="container" ></div>
-<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.8&key=9aa498732bfcfe03cfdf8bb174796390"></script>
+    var map = new AMap.Map("container", {
+        resizeEnable: true,
+        center: [117.31906224701689, 38.38246707430141],
+        zoom: 13
+    });
 
+    var driving = new AMap.Driving({
+        map: map,
+        panel: "panel"
+    });
 
-<script>
+    driving.search([
+        {keyword: '意大利风情街',city:'天津'},
+        {keyword: '北京交通大学海滨学院',city:'黄骅'}
+    ], function(status, result) {
 
-    window.onload = function(){
-        var map = new AMap.Map("container", {
-            zoom: 15,
-            center: [117.31906224701689, 38.38246707430141]
-        });
-
-
-        var marker = new AMap.Marker({
-            position: new AMap.LngLat(117.31906224701689, 38.38246707430141),
-            title: "位置标题"
-        });
-
-
-        map.add(marker);
-    }
+        if (status === 'complete') {
+            log.success('绘制驾车路线完成')
+        } else {
+            log.error('获取驾车数据失败：' + result)
+        }
+    });
 </script>
-
-
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
