--- a/src/main/resources/templates/admin/room_management.html
+++ b/src/main/resources/templates/admin/room_management.html
@@ -68,7 +68,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <a href="#" class="list-group-item active">
-                            <center><strong>客房管理</strong></center>
+                            <div style="text-align: center;"><strong>客房管理</strong></div>
                         </a>
                     </div>
                     <div class="panel-body">
@@ -96,13 +96,13 @@
                                 <th th:text="${roomManage.inTime}">2020年5月10日</th>
                                 <th th:text="${roomManage.outTime}">2020年5月10日</th>
                                 <td>
-                                    <form action="/room_modefy.html">
-                                        <a  type="button" data-toggle="modal" data-target="#login-modal" class="btn btn-success" th:value="${roomManage.roomNums}" name="roomNum">修改</a>
-
+                                    <form action="/getManageId" method="post">
+                                        <button type="submit"  class="btn btn-success" th:value="${roomManage.id}" name="id">修改</button>
                                     </form>
 
                                     <form action="/banRoom" method="post">
-                                        <button type="submit" class="btn btn-danger" th:value="${roomManage.id}" name="id">禁用</button>
+                                        <button type="submit" class="btn btn-danger" th:value="${roomManage.id}" name="id" th:if="${roomManage.status}==1">禁用</button>
+                                        <button type="submit" class="btn btn-primary" th:value="${roomManage.id}" name="id" th:if="${roomManage.status}==0">启用</button>
                                     </form>
                                 </td>
                             </tr>
@@ -125,37 +125,7 @@
     </div>
 </div>
 
-<script>
 
-    $(function() {
-
-        $("html, body").animate({scrollTop: $('#'+domid).offset().top - 80 }, {duration: 500,easing: "swing"});
-
-        return false;
-
-        $('#login-modal').on('show.bs.modal', function() {
-            console.log('显示对话框');
-        });
-        $('#login-modal').on('shown.bs.modal', function() {
-            console.log('对话框已经显示了');
-        });
-        $('#login-modal').on('hide.bs.modal', function() {
-            console.log('隐藏对话框');
-        });
-        $('#login-modal').on('hidden.bs.modal', function() {
-            console.log('隐藏了对话框');
-        });
-        $('#login-modal').on('loaded.bs.modal', function() {
-            console.log('已经加载好了对话框里面的内容');
-        });
-        $('#slideshow').on('slide.bs.carousel', function() {
-            console.log('播放幻灯片');
-        });
-        $('#slideshow').on('slid.bs.carousel', function() {
-            console.log('播放完成！');
-        });
-    });
-</script>
 
 </body>
 </html>
