--- a/src/main/resources/templates/admin/room_modefy.html
+++ b/src/main/resources/templates/admin/room_modefy.html
@@ -1,52 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <title>预约看房订单修改</title>
 </head>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/app.js"></script>
+<script src="js/holder.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
+<link rel="stylesheet" href="css/bootstrap.css">
 <body>
 
 <!-- Modal -->
-
-<div class="modal-header">
-    <button class="close" data-dismiss="modal">&times;</button>
-    <h4>客房信息修改</h4>
-</div>
-<div class="modal-body">
-
-    <form action="" method="post">
-        <div class="form-group">
-            <label for="number">房间号</label>
-            <input type="number" class="form-control" id="number" placeholder="输入房间号">
-        </div>
-        <div class="form-group">
-            <label for="name">姓名</label>
-            <input type="text" class="form-control" id="name" placeholder="输入预定姓名">
-        </div>
-        <div class="form-group">
-            <label for="name">入住状态</label>
-            <select name="">
-                <option value="" >已入住</option>
-                <option  value="">已离店</option>
-            </select>
-            <label for="name">是否停用</label>
-            <select>
-                <option >是</option>
-                <option>否</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="data">入住日期</label>
-            <input type="date" class="form-control" id="data" placeholder="输入入住日期">
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">公寓管理系统</a>
         </div>
 
-    </form>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/roomManage">客房管理</a></li>
+                <li><a href="/goodsMange">商品管理</a></li>
+                <li><a href="/reservation_management">预定管理</a></li>
+                <li class="dropdown">
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">王峥 <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+    <div class="modal-header">
+        <h4>客房信息修改</h4>
+    </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-offset-2 col-xs-offset-2 col-lg-offset-2">
+                <div class="modal-body">
+
+                    <form action="/modefyRoom" method="post">
+                        <div class="form-group">
+                            <label for="number">房间号</label>
+                            <input type="number" class="form-control" id="number" placeholder="输入房间号" th:value="${roomManage.roomNums}" name="roomNums">
+                        </div>
+                        <div class="form-group">
+                            <label for="name" >姓名</label>
+                            <input type="text" th:value="${roomManage.username}" class="form-control" id="name" placeholder="输入预定姓名" name="username">
+                        </div>
+                        <div class="form-group">
+                            <label for="name" >入住状态</label>
+                            <select name="checkIn">
+                                <option value="1" >已入住</option>
+                                <option  value="0">已离店</option>
+                            </select>
+                            <label for="name">是否停用</label>
+                            <select name="status">
+                                <option value="0">是</option>
+                                <option value="1">否</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="data1">入住日期</label>
+                            <input type="date" th:value="${#dates.format(roomManage.inTime,'yyyy-MM-dd')}"  name="inTime" class="form-control" id="data1" placeholder="输入入住日期">
+                        </div>
+                        <div class="form-group">
+                            <label for="data2">离开日期</label>
+                            <input type="date" class="form-control" th:value="${#dates.format(roomManage.outTime,'yyyy-MM-dd')}" name="outTime" id="data2" placeholder="输入入住日期">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary">确定</button>
+                        </div>
+                    </form>
+                </div>
+
+        </div>
+
+    </div>
 </div>
-<div class="modal-footer">
-    <button class="btn btn-primary">确定</button>
-</div>
+
+
+
 
 
 
