--- a/src/main/resources/templates/admin/goods_modefy.html
+++ b/src/main/resources/templates/admin/goods_modefy.html
@@ -5,7 +5,10 @@
     <title>商品管理修改</title>
 </head>
 <body>
-
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/app.js"></script>
+<script src="js/holder.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <!-- Modal -->
 
 <div class="modal-header">
