--- a/src/main/resources/templates/admin/reservation_management.html
+++ b/src/main/resources/templates/admin/reservation_management.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -90,18 +91,18 @@
                                 <th th:text="${bookRoom.userName}">王慧凯</th>
                                 <th th:text="${bookRoom.idCard}">130225*********</th>
                                 <th th:text="${bookRoom.roomNummber}"></th>
-                                <th th:text="${bookRoom.inTime}">2020年5月20日</th>
-                                <th th:text="${bookRoom.outTime}"></th>
+                                <th th:text="${#dates.format(bookRoom.inTime,'yyyy-MM-dd')}">2020年5月20日</th>
+                                <th th:text="${#dates.format(bookRoom.outTime,'yyyy-MM-dd')}"></th>
                                 <th th:text="${bookRoom.deposit}">100</th>
                                 <td>
                                     <form action="/getReserId" method="post">
-                                        <button href="" type="submit"
-                                                class="btn btn-success" name="id" th:value="${bookRoom.id}">修改</button>
+                                        <button  type="submit" class="btn btn-success" name="id" th:value="${bookRoom.id}">修改</button>
                                     </form>
 
-                                    <form action="" >
-                                        <button type="button" class="btn btn-danger" th:value="${bookRoom.userName}">删除</button>
+                                    <form action="/delectReser" method="post" >
+                                        <button type="submit" class="btn btn-danger" th:value="${bookRoom.id}" name="id">删除</button>
                                     </form>
+
                                     <button type="button" class="btn  btn-primary">确认</button>
                                 </td>
                             </tr>
