--- a/src/main/resources/templates/admin/room_modefy.html
+++ b/src/main/resources/templates/admin/room_modefy.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <meta charset="UTF-8">
     <title>预约看房订单修改</title>
@@ -31,7 +30,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="/roomManage">客房管理</a></li>
-                <li><a href="/goodsMange">商品管理</a></li>
+                <li><a href="/goodsManage">商品管理</a></li>
                 <li><a href="/reservation_management">预定管理</a></li>
                 <li class="dropdown">
                     <ul class="dropdown-menu">
