--- a/src/main/resources/templates/admin/reservation_modefy.html
+++ b/src/main/resources/templates/admin/reservation_modefy.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <title>预定订单修改</title>
 </head>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/app.js"></script>
+<script src="js/holder.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
+<link rel="stylesheet" href="css/bootstrap.css">
 <body>
 
 <!-- Modal -->
